@@ -4,6 +4,11 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-05-04
+
+  - Fixed #290: Validation of account name components was incorrectly swapped.
+
+
 2018-05-03
 
   - Amended PR74: Adding a new unit test, fail if tags / link appear after the
